--- a/.github/workflows/publish_pypi.yaml
+++ b/.github/workflows/publish_pypi.yaml
@@ -6,6 +6,9 @@ jobs:
   pypi-publish:
     name: upload release to PyPI
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/t2d2-sdk
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
@@ -19,19 +22,11 @@ jobs:
                 
       - name: Install pypa/build
         run: >-
-          python -m
-          pip install
-          build
-          --user
+          python -m pip install build  --user
 
       - name: Build a binary wheel and a source tarball
         run: >-
-          python -m
-          build
-          --sdist
-          --wheel
-          --outdir dist/
-          .
+          python -m build  --sdist --wheel --outdir dist/  .
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
