--- a/.github/workflows/publish_pypi.yaml
+++ b/.github/workflows/publish_pypi.yaml
@@ -18,11 +18,14 @@ jobs:
     steps:
       # retrieve your distributions here
       - uses: actions/checkout@v3
-
       - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
                 
+      - name: Fetch tags
+        # fetch all tags for changelog and pip install
+        run: git fetch origin --depth=1 +refs/tags/*:refs/tags/*
+
       - name: Install pypa/build
         run: >-
           python -m pip install build  --user
