--- a/.github/workflows/publish_pypi.yaml
+++ b/.github/workflows/publish_pypi.yaml
@@ -17,14 +17,13 @@ jobs:
       id-token: write
     steps:
       # retrieve your distributions here
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
-                
-      - name: Fetch tags
-        # fetch all tags for changelog and pip install
-        run: git fetch origin --depth=1 +refs/tags/*:refs/tags/*
 
       - name: Install pypa/build
         run: >-
