fix(core): Increment version fix

--- a/.github/workflows/publish_pypi.yaml
+++ b/.github/workflows/publish_pypi.yaml
@@ -19,8 +19,8 @@ jobs:
           scheme: conventional_commits
       - name: Push git tags
         run: 
-          git config --local user.email "bhiriyur@t2d2.ai"
-          git config --local user.name "Badri Hiriyur"
+          git config --local user.email "bhiriyur@t2d2.ai" &&
+          git config --local user.name "Badri Hiriyur" &&
           git tag -a v${{ steps.version.outputs.version }} -m "v${{ steps.version.outputs.version }}"
   pypi-publish:
     name: upload release to PyPI
