--- a/.github/workflows/publish_pypi.yaml
+++ b/.github/workflows/publish_pypi.yaml
@@ -21,7 +21,8 @@ jobs:
         run: 
           git config --local user.email "bhiriyur@t2d2.ai" &&
           git config --local user.name "Badri Hiriyur" &&
-          git tag -a v${{ steps.version.outputs.version }} -m "v${{ steps.version.outputs.version }}"
+          git tag -a v${{ steps.version.outputs.version }} -m "v${{ steps.version.outputs.version }}" &&
+          git push origin v${{ steps.version.outputs.version }}
   pypi-publish:
     name: upload release to PyPI
     needs: increment-version
