--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requires-python = ">=3.8"
 dependencies = [
   "boto3",
   "requests",
+  "sentry_sdk"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
